--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "~1.16.0",
+    "compression": "^1.6.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "dotenv": "^4.0.0",
+    "errorhandler": "^1.4.3",
     "express": "~4.14.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.15.1",
+    "express-status-monitor": "^0.1.9",
+    "express-validator": "^3.1.2",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
+    "passport": "0.3.2",
     "pug": "~2.0.0-beta10",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "twilio": "^3.3.1-edge",
+    "twit": "^2.2.5",
+    "validator": "^7.0.0"
   }
 }
