--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "express-session": "^1.15.1",
     "express-status-monitor": "^0.1.9",
     "express-validator": "^3.1.2",
+    "grunt": "^1.0.1",
+    "grunt-ts": "^6.0.0-beta.15",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "node-sass-middleware": "^0.11.0",
     "passport": "0.3.2",
     "pug": "~2.0.0-beta10",
+    "react": "^15.4.2",
     "serve-favicon": "~2.3.2",
     "twilio": "^3.3.1-edge",
     "twit": "^2.2.5",
+    "typescript": "^2.2.1",
     "validator": "^7.0.0"
   }
 }
