--- a/package.json
+++ b/package.json
@@ -32,6 +32,15 @@
   },
 
   "devDependencies": {
+    "browser-sync": "^2.18.8",
+    "gulp": "^3.9.1",
+    "gulp-less": "^3.3.0",
+    "gulp-mocha": "^4.1.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-tsb": "^2.0.3",
+    "marked": "^0.3.6",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
     "grunt": "^1.0.1",
     "grunt-ts": "^6.0.0-beta.15",
     "typescript": "^2.2.1"
